# terrain-gen-rust

./: .gitignore  CLAUDE.md  Cargo.toml  INDEX.md  README.md  TODO.md  features.json  screenshot.ansi
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  agent_autoloop_review.md  deep_research_prompt.md  economy_design.md  game_design.md  metrics_history.json  playtest_notes.md  terrain_research_topics.md  test_audit.md  workflow.md
docs/design/: INTEGRATION.md  KNOWN_CONFLICTS.md  building_info_hubs.md  chokepoint_detection.md  farming_changes_terrain.md  hierarchical_pathfinding.md  landscape_rendering_mode.md  local_awareness.md  map_rendering_mode.md  milestone_notifications.md  mining_changes_terrain.md  per_villager_memory.md  resource_flow_visibility.md  rivers_as_barriers.md  seasonal_pressure_rhythm.md  stockpile_bulletin_board.md  terrain_driven_settlement.md  threat_scaling.md  water_proximity_farming.md
docs/health_reports/: 2026-04-04.md  2026-04-05.md  2026-04-06.md  2026-04-07.md  (+35 more)
scripts/: capture_eval_frames.sh  check_baselines.sh  default_ai.lua  defend_first.lua  pacifist.lua  play_fun.sh  play_work.sh  record_metrics.sh  screenshots.sh  validate_features.sh
src/: analytical_erosion.rs  crossterm_renderer.rs  ecs.rs  game.rs  headless_renderer.rs  hydrology.rs  lib.rs  main.rs  pipe_water.rs  renderer.rs  simulation.rs  terrain_gen.rs  terrain_pipeline.rs  tilemap.rs  world_state.rs
tapes/: building.tape  demo.tape  screenshot.tape  test.tape
tests/: hydrology_integration.rs  integration.rs
(+106 files in other folders)
