[package]
name = "terrain-gen-rust"
version = "0.1.0"
edition = "2024"

[features]
default = []
lua = ["mlua"]
png = ["image", "font8x8"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
hecs = "0.11.0"
mlua = { version = "0.10", features = ["lua54", "vendored"], optional = true }
noise = "0.9.0"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.25", optional = true, default-features = false, features = ["png"] }
font8x8 = { version = "0.3", optional = true }

# Fast debug builds — optimize deps but keep our code debuggable
[profile.dev.package."*"]
opt-level = 2

[profile.dev]
opt-level = 1
